<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/menu_title_layout" />

    <RelativeLayout
        android:id="@+id/rl_edit_text"
        android:layout_width="@dimen/dp_400"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_146">

        <io.kuban.visitorpad.view.LetterSpacingEditText
            android:id="@+id/edit_text"
            android:layout_width="@dimen/dp_400"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableBottom="@drawable/edit_text_line"
            android:gravity="center"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:paddingBottom="@dimen/dp_10"
            android:textColor="@color/text_color_blue_31"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/sp_50" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view_click"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />


    </RelativeLayout>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_60"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/invite_code_prompt"
        android:textColor="@color/error_message_color"
        android:textSize="@dimen/sp_20"
        android:visibility="invisible" />

    <com.dariopellegrini.formbuilder.FineTextView
        android:id="@+id/confirm_button"
        android:layout_width="@dimen/dp_272"
        android:layout_height="@dimen/dp_70"
        android:layout_below="@+id/error_message"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_132"
        android:background="@drawable/bg_btn_selector"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_28" />

    <LinearLayout
        android:id="@+id/dont_have_invite_code"
        android:layout_width="@dimen/dp_272"
        android:layout_height="@dimen/dp_70"
        android:layout_marginTop="21dp"
        android:background="@drawable/bg_btn_border_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/confirm_button"
        android:layout_alignLeft="@+id/confirm_button"
        android:layout_alignStart="@+id/confirm_button">

        <com.dariopellegrini.formbuilder.FineTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_12"
            android:text="@string/dont_have_invite_code"
            android:textColor="@color/button_text_pressed_white_selector"
            android:textSize="@dimen/sp_28" />

    </LinearLayout>

</RelativeLayout>