<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="@dimen/dp_425"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/bg_btn_rounded_black_border"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_196">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view_click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_but_background_green" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_30"
            android:paddingRight="@dimen/dp_30">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20">

                <ImageView
                    android:id="@+id/phone_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/company_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_13"
                    android:layout_toRightOf="@+id/phone_img"
                    android:text="@string/company_name"
                    android:textColor="@color/text_color_blue_9c"
                    android:textSize="@dimen/sp_22" />

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_13"
                    android:textColor="@color/validation_fails_popwindow_text_color"
                    android:textSize="@dimen/sp_22" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_20">

                <ImageView
                    android:id="@+id/company_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/division_icon" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_13"
                    android:layout_toRightOf="@+id/company_img"
                    android:text="@string/location_name"
                    android:textColor="@color/text_color_blue_9c"
                    android:textSize="@dimen/sp_22" />

                <TextView
                    android:id="@+id/location_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dp_70"
                    android:layout_toRightOf="@+id/text"
                    android:gravity="right"
                    android:singleLine="true"
                    android:textColor="@color/validation_fails_popwindow_text_color"
                    android:textSize="@dimen/sp_22" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_40">

        <com.dariopellegrini.formbuilder.FineTextView
            android:id="@+id/open_visitors_system"
            android:layout_width="@dimen/dp_272"
            android:layout_height="@dimen/dp_70"
            android:background="@drawable/bg_btn_selector"
            android:gravity="center"
            android:text="@string/open_visitors_system"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_20" />

        <LinearLayout
            android:id="@+id/again_match"
            android:layout_width="@dimen/dp_272"
            android:layout_height="@dimen/dp_70"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_17"
            android:layout_toRightOf="@+id/open_visitors_system"
            android:background="@drawable/bg_btn_border_selector"
            android:gravity="center"
            android:orientation="horizontal">

            <com.dariopellegrini.formbuilder.FineTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:text="@string/again_match"
                android:textColor="@color/button_text_pressed_white_selector"
                android:textSize="@dimen/sp_20" />

        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>